2012-10-22 bbirtles@mozilla.com
	Fix some typos and links.

2012-10-21 dschulze@adobe.com
	Make interface code more validator friendly.

2012-10-21 dschulze@adobe.com
	Add CSSOM-VIEW to other references section.

2012-10-21 dschulze@adobe.com
	Add DOM interfaces for 'mask' and 'clipPath'.

2012-10-19 dschulze@adobe.com
	Merge clip region defintion from 'clip' and 'clip-path'.

2012-10-19 dschulze@adobe.com
	Remove masking from example images.

2012-10-12 dschulze@adobe.com
	Added clipping to abstract and introduction.

2012-10-11 dschulze@adobe.com
	Specify how mask-box-image contribute to masking.
	Cleanup.

2012-10-11 dschulze@adobe.com
	Replace all FuncIRI references by url.
	Remove normative reference to Filter Effects and just use SVG 1.1.
	Fixed typos.

2012-10-10 dschulze@adobe.com
	Added 'clip' property from CSS 2.1.
	Fixed typos.

2012-10-09 bbirtles@mozilla.com
	Fixed further typos.
	Added definition of alpha and luminance under 'mask' property.
	Extend example of mask-type overriding to something more realistic.

2012-10-07 dschulze@adobe.com
	Fixed typos.

2012-10-05 dschulze@adobe.com
	'alpha' and 'luminance' keywords on 'mask' override 'mask-type' definition.
	Make 'mask-type' presentation attribute.
	Define that 'mask-*' properties have no affect on referenced 'mask' elements.

2012-10-02 dschulze@adobe.com
	Added 'alpha' and 'luminance' keywords to mask reference syntax.
	Specified how mask images of different masking types are combined.

2012-09-26 dschulze@adobe.com
	Added Brian as editor to the spec.

2012-09-25 bbirtles@mozilla.com
	Remove maskType from mask element since it is now defined as the mask-type
	property.
	Fix some typos / grammar.
	Fix some linking issues.
	Add Brian as author.
	Disallow 'mask-image: none alpha'
	Remove some broken links.

2012-09-19 dschulze@adobe.com
	Fxed typos.
	Made correction on syntax for 'mask-image'. Compatible to WebKit again.
	Updated descripton of 'mask-type'.