@@ -2288,7 +2288,7 @@ fine-grained control over the interactions between hit testing and clipping.</p>
 <p>The <a>SVGClipPathElement</a> interface corresponds to the <a>'clipPath'</a> element.</p>
 
 <pre class="idl">interface <b>SVGClipPathElement</b> : <a>SVGDefinitionElement</a> {
-  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a href="#SVGClipPathElement__clipPathUnits">clipPathUnits</a>;
+  readonly attribute <a>SVGAnimatedEnumeration</a> <a href="#SVGClipPathElement__clipPathUnits">clipPathUnits</a>;
 };
 
 <a>SVGClipPathElement</a> implements <a>SVGUnitTypes</a>;</pre>
@@ -2298,7 +2298,7 @@ fine-grained control over the interactions between hit testing and clipping.</p>
 <dd>
 <dl class="attributes">
 
-<dt id="SVGClipPathElement__clipPathUnits" class="attribute first-child"><b>clipPathUnits</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a>)</span></dt>
+<dt id="SVGClipPathElement__clipPathUnits" class="attribute first-child"><b>clipPathUnits</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedEnumeration</a>)</span></dt>
 <dd class="attribute">
 <div>
 Corresponds to attribute <a>'clipPathUnits'</a> on the given
@@ -2321,12 +2321,12 @@ Corresponds to attribute <a>'clipPathUnits'</a> on the given
   const unsigned short <a href="#SVGMaskElement__SVG_MASKTYPE_LUMINANCE">SVG_MASKTYPE_LUMINANCE</a> = 0;
   const unsigned short <a href="#SVGMaskElement__SVG_MASKTYPE_ALPHA">SVG_MASKTYPE_ALPHA</a> = 1;
 
-  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a href="#SVGMaskElement__maskUnits">maskUnits</a>;
-  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a href="#SVGMaskElement__maskContentUnits">maskContentUnits</a>;
-  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a href="#SVGMaskElement__x">x</a>;
-  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a href="#SVGMaskElement__y">y</a>;
-  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a href="#SVGMaskElement__width">width</a>;
-  readonly attribute <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a href="#SVGMaskElement__height">height</a>;
+  readonly attribute <a>SVGAnimatedEnumeration</a> <a href="#SVGMaskElement__maskUnits">maskUnits</a>;
+  readonly attribute <a>SVGAnimatedEnumeration</a> <a href="#SVGMaskElement__maskContentUnits">maskContentUnits</a>;
+  readonly attribute <a>SVGAnimatedLength</a> <a href="#SVGMaskElement__x">x</a>;
+  readonly attribute <a>SVGAnimatedLength</a> <a href="#SVGMaskElement__y">y</a>;
+  readonly attribute <a>SVGAnimatedLength</a> <a href="#SVGMaskElement__width">width</a>;
+  readonly attribute <a>SVGAnimatedLength</a> <a href="#SVGMaskElement__height">height</a>;
 };
 
 <a>SVGMaskElement</a> implements <a>SVGUnitTypes</a>;</pre>
@@ -2359,7 +2359,7 @@ Corresponds to value <span class="attr-value">'alpha'</span>.
 <dd>
 <dl class="attributes">
 
-<dt id="SVGMaskElement__maskUnits" class="attribute first-child"><b>maskUnits</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a>)</span></dt>
+<dt id="SVGMaskElement__maskUnits" class="attribute first-child"><b>maskUnits</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedEnumeration</a>)</span></dt>
 <dd class="attribute">
 <div>
 Corresponds to attribute <a>'maskUnits'</a> on the given
@@ -2369,7 +2369,7 @@ Corresponds to attribute <a>'maskUnits'</a> on the given
 </div>
 </dd>
 
-<dt id="SVGMaskElement__maskContentUnits" class="attribute"><b>maskContentUnits</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a>)</span></dt>
+<dt id="SVGMaskElement__maskContentUnits" class="attribute"><b>maskContentUnits</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedEnumeration</a>)</span></dt>
 <dd class="attribute">
 <div>
 Corresponds to attribute <a>'maskContentUnits'</a> on the given
@@ -2379,7 +2379,7 @@ Corresponds to attribute <a>'maskContentUnits'</a> on the given
 </div>
 </dd>
 
-<dt id="SVGMaskElement__x" class="attribute"><b>x</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span></dt>
+<dt id="SVGMaskElement__x" class="attribute"><b>x</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedLength</a>)</span></dt>
 <dd class="attribute">
 <div>
 Corresponds to attribute <a>'mask/x'</a> on the given <a>'mask element'</a>
@@ -2388,7 +2388,7 @@ element.
 </div>
 </dd>
 
-<dt id="SVGMaskElement__y" class="attribute"><b>y</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span></dt>
+<dt id="SVGMaskElement__y" class="attribute"><b>y</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedLength</a>)</span></dt>
 <dd class="attribute">
 <div>
 Corresponds to attribute <a>'mask/y'</a> on the given <a>'mask element'</a>
@@ -2397,7 +2397,7 @@ element.
 </div>
 </dd>
 
-<dt id="SVGMaskElement__width" class="attribute"><b>width</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span></dt>
+<dt id="SVGMaskElement__width" class="attribute"><b>width</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedLength</a>)</span></dt>
 <dd class="attribute">
 <div>
 Corresponds to attribute <a>'mask/width'</a> on the given
@@ -2406,7 +2406,7 @@ Corresponds to attribute <a>'mask/width'</a> on the given
 </div>
 </dd>
 
-<dt id="SVGMaskElement__height" class="attribute"><b>height</b><span class="idl-type-parenthetical"> (readonly <a class="idlinterface" href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span></dt>
+<dt id="SVGMaskElement__height" class="attribute"><b>height</b><span class="idl-type-parenthetical"> (readonly <a>SVGAnimatedLength</a>)</span></dt>
 <dd class="attribute">
 <div>
 Corresponds to attribute <a>'mask/height'</a> on the given
@@ -2417,16 +2417,6 @@ Corresponds to attribute <a>'mask/height'</a> on the given
 </dl>
 </dd>
 </dl>
-
-<h3 id="InterfaceSVGDefinitionElement">Interface SVGDefinitionElement</h3>
-
-<p>Interface <a>SVGDefinitionElement</a> represents SVG elements whose primary purpose
-is to define a reusable resource.</p>
-
-<pre class="idl">interface <b>SVGDefinitionElement</b> : <a>SVGElement</a> {
-};
-
-<a>SVGDefinitionElement</a> implements <a>SVGTests</a>;</pre>
 
 <h2 class=no-num id="references">
 References</h2>
