@@ -66,4 +66,6 @@
   <term name='unsupported' href='http://www.w3.org/TR/2008/REC-SVGTiny12-20081222/intro.html#TermUnsupportedValue'/>
   <term name='unsupported value' href='http://www.w3.org/TR/2008/REC-SVGTiny12-20081222/intro.html#TermUnsupportedValue'/>
   <term name='tree order' href='http://www.w3.org/TR/2012/WD-dom-20120405/#concept-tree-order'/>
+
+  <interface name='SVGDefinitionElement' href='https://svgwg.org/svg2-draft/types.html#InterfaceSVGDefinitionElement'/>
 </definitions>
