@@ -262,9 +262,6 @@
 
      <li><a href="#InterfaceSVGMaskElement"><span class=secno>9.2.
       </span>Interface SVGMaskElement</a>
-
-     <li><a href="#InterfaceSVGDefinitionElement"><span class=secno>9.3.
-      </span>Interface SVGDefinitionElement</a>
     </ul>
 
    <li class=no-num><a href="#references"> References</a>
@@ -3810,21 +3807,21 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
   <h3 id=InterfaceSVGClipPathElement><span class=secno>9.1. </span>Interface
    SVGClipPathElement</h3>
 
-  <p>The <span class=xxx>SVGClipPathElement</span> interface corresponds to
-   the <a class=element-name href="#ClipPathElement">‘<code
-   class=property>clipPath</code>’</a> element.
+  <p>The <a href="#InterfaceSVGClipPathElement">SVGClipPathElement</a>
+   interface corresponds to the <a class=element-name
+   href="#ClipPathElement">‘<code class=property>clipPath</code>’</a>
+   element.
 
-  <pre class=idl>interface <b>SVGClipPathElement</b> : <span
-   class=xxx>SVGDefinitionElement</span> {
+  <pre class=idl>interface <b>SVGClipPathElement</b> : <a
+   href="https://svgwg.org/svg2-draft/types.html#InterfaceSVGDefinitionElement">SVGDefinitionElement</a> {
   readonly attribute <a
-   class=idlinterface
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a
    href="#SVGClipPathElement__clipPathUnits">clipPathUnits</a>;
 };
 
-<span
-   class=xxx>SVGClipPathElement</span> implements <span
-   class=xxx>SVGUnitTypes</span>;</pre>
+<a
+   href="#InterfaceSVGClipPathElement">SVGClipPathElement</a> implements <a
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGUnitTypes">SVGUnitTypes</a>;</pre>
 
   <dl class=interface>
    <dt class=attributes-header>Attributes:
@@ -3833,7 +3830,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
     <dl class=attributes>
      <dt class="attribute first-child"
       id="SVGClipPathElement__clipPathUnits"><b>clipPathUnits</b><span
-      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      class=idl-type-parenthetical> (readonly <a
       href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a>)</span>
 
      <dd class=attribute>
@@ -3842,19 +3839,20 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
        class=property>clipPathUnits</code>’</a> on the given <a
        class=element-name href="#ClipPathElement">‘<code
        class=property>clipPath</code>’</a> element. Takes one of the
-       constants defined in <span class=xxx>SVGUnitTypes</span>.</div>
+       constants defined in <a
+       href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGUnitTypes">SVGUnitTypes</a>.</div>
     </dl>
   </dl>
 
   <h3 id=InterfaceSVGMaskElement><span class=secno>9.2. </span>Interface
    SVGMaskElement</h3>
 
-  <p>The <span class=xxx>SVGMaskElement</span> interface corresponds to the
-   <a class=element-name href="#MaskElement">‘<code
+  <p>The <a href="#InterfaceSVGMaskElement">SVGMaskElement</a> interface
+   corresponds to the <a class=element-name href="#MaskElement">‘<code
    class=property>mask</code>’</a> element.
 
-  <pre class=idl>interface <b>SVGMaskElement</b> : <span
-   class=xxx>SVGDefinitionElement</span> {
+  <pre class=idl>interface <b>SVGMaskElement</b> : <a
+   href="https://svgwg.org/svg2-draft/types.html#InterfaceSVGDefinitionElement">SVGDefinitionElement</a> {
 
   // Mask Types
   const unsigned short <a
@@ -3863,34 +3861,28 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    href="#SVGMaskElement__SVG_MASKTYPE_ALPHA">SVG_MASKTYPE_ALPHA</a> = 1;
 
   readonly attribute <a
-   class=idlinterface
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a
    href="#SVGMaskElement__maskUnits">maskUnits</a>;
   readonly attribute <a
-   class=idlinterface
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a> <a
    href="#SVGMaskElement__maskContentUnits">maskContentUnits</a>;
   readonly attribute <a
-   class=idlinterface
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a
    href="#SVGMaskElement__x">x</a>;
   readonly attribute <a
-   class=idlinterface
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a
    href="#SVGMaskElement__y">y</a>;
   readonly attribute <a
-   class=idlinterface
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a
    href="#SVGMaskElement__width">width</a>;
   readonly attribute <a
-   class=idlinterface
    href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a> <a
    href="#SVGMaskElement__height">height</a>;
 };
 
-<span
-   class=xxx>SVGMaskElement</span> implements <span
-   class=xxx>SVGUnitTypes</span>;</pre>
+<a
+   href="#InterfaceSVGMaskElement">SVGMaskElement</a> implements <a
+   href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGUnitTypes">SVGUnitTypes</a>;</pre>
 
   <dl class=interface>
    <dt class=constants-header>Constants in group “Mask Types”:
@@ -3920,7 +3912,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
     <dl class=attributes>
      <dt class="attribute first-child"
       id="SVGMaskElement__maskUnits"><b>maskUnits</b><span
-      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      class=idl-type-parenthetical> (readonly <a
       href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a>)</span>
 
      <dd class=attribute>
@@ -3929,11 +3921,12 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
        class=property>maskUnits</code>’</a> on the given <a
        class=element-name href="#MaskElement">‘<code
        class=property>mask</code>’</a> element. Takes one of the constants
-       defined in <span class=xxx>SVGUnitTypes</span>.</div>
+       defined in <a
+       href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGUnitTypes">SVGUnitTypes</a>.</div>
 
      <dt class=attribute
       id="SVGMaskElement__maskContentUnits"><b>maskContentUnits</b><span
-      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      class=idl-type-parenthetical> (readonly <a
       href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedEnumeration">SVGAnimatedEnumeration</a>)</span>
 
      <dd class=attribute>
@@ -3942,10 +3935,11 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
        class=property>maskContentUnits</code>’</a> on the given <a
        class=element-name href="#MaskElement">‘<code
        class=property>mask</code>’</a> element. Takes one of the constants
-       defined in <span class=xxx>SVGUnitTypes</span>.</div>
+       defined in <a
+       href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGUnitTypes">SVGUnitTypes</a>.</div>
 
      <dt class=attribute id="SVGMaskElement__x"><b>x</b><span
-      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      class=idl-type-parenthetical> (readonly <a
       href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span>
 
      <dd class=attribute>
@@ -3955,7 +3949,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
        class=property>mask</code>’</a> element.</div>
 
      <dt class=attribute id="SVGMaskElement__y"><b>y</b><span
-      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      class=idl-type-parenthetical> (readonly <a
       href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span>
 
      <dd class=attribute>
@@ -3965,7 +3959,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
        class=property>mask</code>’</a> element.</div>
 
      <dt class=attribute id="SVGMaskElement__width"><b>width</b><span
-      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      class=idl-type-parenthetical> (readonly <a
       href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span>
 
      <dd class=attribute>
@@ -3976,7 +3970,7 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
        element.</div>
 
      <dt class=attribute id="SVGMaskElement__height"><b>height</b><span
-      class=idl-type-parenthetical> (readonly <a class=idlinterface
+      class=idl-type-parenthetical> (readonly <a
       href="http://www.w3.org/TR/2011/REC-SVG11-20110816/types.html#InterfaceSVGAnimatedLength">SVGAnimatedLength</a>)</span>
 
      <dd class=attribute>
@@ -3987,20 +3981,6 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
        element.</div>
     </dl>
   </dl>
-
-  <h3 id=InterfaceSVGDefinitionElement><span class=secno>9.3.
-   </span>Interface SVGDefinitionElement</h3>
-
-  <p>Interface <span class=xxx>SVGDefinitionElement</span> represents SVG
-   elements whose primary purpose is to define a reusable resource.
-
-  <pre class=idl>interface <b>SVGDefinitionElement</b> : <span
-   class=xxx>SVGElement</span> {
-};
-
-<span
-   class=xxx>SVGDefinitionElement</span> implements <span
-   class=xxx>SVGTests</span>;</pre>
 
   <h2 class=no-num id=references> References</h2>
 
