@@ -1,4 +1,8 @@
 2012-10-22 bbirtles@mozilla.com
+	Remove absolute links to interfaces and take them from the definitions file
+	instead.
+
+2012-10-22 bbirtles@mozilla.com
 	Fix some typos and links.
 
 2012-10-21 dschulze@adobe.com
